Resolve lint warnings